# claude-skill-manager

./: .gitignore  README.md  pyproject.toml
src/claude_skill_manager/: __init__.py  cli.py  config.py  fetcher.py  installer.py  models.py
tests/: __init__.py  test_config.py  test_fetcher.py  test_installer.py  test_models.py
